# nhl-pipeline

./: .gitignore  dbt_project.yml  pyproject.toml
.github/workflows/: lint-sql-scripts.yaml
logs/: .nfsd825f12607509b5f000004eb  dbt.log.legacy
models/staging/moneypuck/: dim_players.sql  dim_team.sql
nhl_daily_fantasy_analysis/: analysis.ipynb
nhl_daily_fantasy_analysis/data/input/: rotogrinders-20241204.csv
nhl_daily_fantasy_analysis/sites/: draftkings.py  hashtag_hockey.py  rotogrinders.py
nhl_daily_fantasy_analysis/transform/: update_dw_transformations_rotogrinders.py
tests/extract/rotogrinders/: main.py
