[tool.poetry]
name = "nhl-daily-fantasy-analysis"
version = "0.1.0"
description = ""
authors = ["Brian Barnes <brianbarnes@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
bs4 = "^0.0.2"
requests = "^2.32.3"
lxml = "^5.3.0"
gcsfs = "^2024.10.0"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
